# pm_kanban

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  auth.py  db.py  main.py  models.py
backend/static/: index.html
backend/tests/: test_ai.py  test_auth.py  test_board.py  test_chat.py  test_health.py
docs/: DATABASE.md  PLAN.md  code_review.md
frontend/: AGENTS.md  next.config.ts  playwright.config.ts
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  LoginForm.test.tsx  LoginForm.tsx
frontend/src/lib/: api.ts
frontend/tests/: auth.spec.ts  chat.spec.ts  helpers.ts  kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
