[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "itsdangerous>=2.2.0",
    "openai>=2.41.1",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["live: calls the real OpenRouter API"]
addopts = "-m 'not live'"
